Fix blurry text effect in IE (text-shadow opacity is scaled by color opacity :-( )

--- a/style.css
+++ b/style.css
@@ -173,13 +173,13 @@ story.invisible {
 @-webkit-keyframes blurry-fade-in {
     from {
         text-shadow: 0px 0px 3px rgba(255, 255, 255, 0);
-        color: rgba(0, 0, 0, 0);
+        color: rgba(110, 110, 110, 0);
         opacity: 1.0;
     }
 
     60% {
         text-shadow: 0px 0px 3px rgba(255, 255, 255, 1);
-        color: rgba(0, 0, 0, 0);
+        color: rgba(110, 110, 110, 1);
         opacity: 1.0;
     }
 
@@ -192,13 +192,13 @@ story.invisible {
 @keyframes blurry-fade-in {
     from {
         text-shadow: 0px 0px 3px rgba(255, 255, 255, 0);
-        color: rgba(0, 0, 0, 0);
+        color: rgba(110, 110, 110, 0);
         opacity: 1.0;
     }
 
     60% {
         text-shadow: 0px 0px 3px rgba(255, 255, 255, 1);
-        color: rgba(0, 0, 0, 0);
+        color: rgba(110, 110, 110, 1);
         opacity: 1.0;
     }
 
